--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
 
         <div class="resume">
-            <a href="Resume/My resume.pdf">
+            <a href="Resume/My resume.pdf" target="_blank">
                 <button class="cv">View Resume <i class="fas fa-file-alt"></i></button>
             </a>
         </div>
