Update new project PALS

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="front" style="list-style: none;">
                     <li><a href="index.html">About</a></li>
-                    <li><a href="portal.html">Projects</a></li>
+                    <li><a href="pals.html">Projects</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
