--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html">About</a></li>
-                    <li><a href="portal.html">Projects</a></li>
+                    <li><a href="pals.html">Projects</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
