--- a/portal.html
+++ b/portal.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Project 1</title>
+  <title>Project Portal</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bootstrap.min.css">
@@ -17,7 +17,7 @@
       <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
               <li><a href="index.html">About</a></li>
-              <li><a href="portal.html">Projects</a></li>
+              <li><a href="pals.html">Projects</a></li>
               <li><a href="contact.html">Contact</a></li>
           </ul>
       </div>
@@ -96,7 +96,12 @@
     <a href="schoolproject.html" class="btn">
         <button id="btn-link">Next Project</button>
     </a>
+
+    <a href="pals.html" class="btn-prev">
+      <button id="btn-prevv">Previous Project</button>
+    </a>
   </div>
+</div>
 
   <script src="script.js"></script>
   <script src="jquery.min.js"></script>
