--- a/printproject.html
+++ b/printproject.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Project 4</title>
+    <title>Project Mizuho Japan</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bootstrap.min.css">
@@ -17,7 +17,7 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html">About</a></li>
-                    <li><a href="portal.html">Projects</a></li>
+                    <li><a href="pals.html">Projects</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
