--- a/pals.html
+++ b/pals.html
@@ -30,7 +30,7 @@
       <div style="padding-top: 30px;"></div>
       <p style="text-align: left;"><strong style="font-size: 25px;">What is PALS?</strong><br> To help seniors to age-in-place by providing personalised care for seniors <br> to better manage their health and be supported by local communities to live independently.
       </p>
-      <img src="img/PALS_Intro.png" width="100%" height="100%">
+      <div style="text-align: left"><img src="img/PALS_Intro.png" width="50%" height="50%"></div>
     </div>
   </div>
 
@@ -106,7 +106,7 @@
     <div class="col-sm-12 project1">
       <h4>Mobile Screens</h4>
       <img src="img/PALS_mobile.png" width="100%" height="100%">
-      <img src="img/PALS_onboarding.jpg" width="100%" height="100%">
+      <div style="text-align: left"><img src="img/PALS_onboarding.jpg" width="50%" height="50%"></div>
     </div>
   </div>
 
