--- a/pals.html
+++ b/pals.html
@@ -61,7 +61,7 @@
     </div>
 
     <div class="col-sm-12 project1" style="padding-top: 50px;">
-        <p style="font-size: 14px; text-align: left;"><strong style="font-size: 18px;">2. PALS tablet</strong><br>Seniors enrolled into this trial</p>
+        <p style="font-size: 14px; text-align: left;"><strong style="font-size: 18px;">2. PALS Tablet</strong><br>Seniors enrolled into this trial</p>
         <div style='padding-top: 20px;'></div>
         <ul>
             <li style="font-size: 14px;">View consolidated schedule for the day with reminders</li>
